--- a/src/weather.css
+++ b/src/weather.css
@@ -8,3 +8,15 @@ ul li {
 .weather-info {
   padding-left: 0;
 }
+.weather-image {
+  width: 100px;
+}
+.temperature {
+  font-size: 72px;
+  line-height: 100px;
+  align-items: middle;
+}
+.units {
+  top: 32px;
+  font-size: 24px;
+}
